--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,8 @@ bin/fpl
 bin/ArkScript
 bin/nodejs
 bin/npm
+
+fastscript/code/__arkscript__
+fastscript/code/node_modules
+fastscript/code/package-lock.json
+fastscript/code/package.json
